@@ -26,6 +26,7 @@ use NewsExtractor::SiteSpecificExtractor::estate_ltn_com_tw;
 use NewsExtractor::SiteSpecificExtractor::www_upmedia_mg;
 use NewsExtractor::SiteSpecificExtractor::ctee_com_tw;
 use NewsExtractor::SiteSpecificExtractor::news_ebc_net_tw;
+use NewsExtractor::SiteSpecificExtractor::newnet_tw;
 use NewsExtractor::SiteSpecificExtractor::UDN;
 use NewsExtractor::SiteSpecificExtractor::ETtoday;
 use NewsExtractor::SiteSpecificExtractor::ChinaTimes;
@@ -70,6 +71,7 @@ use constant {
         'www.upmedia.mg' => 'NewsExtractor::SiteSpecificExtractor::www_upmedia_mg',
         'ctee.com.tw' => 'NewsExtractor::SiteSpecificExtractor::ctee_com_tw',
         'news.ebc.net.tw' => 'NewsExtractor::SiteSpecificExtractor::news_ebc_net_tw',
+        'newnet.tw' => 'NewsExtractor::SiteSpecificExtractor::newnet_tw',
     },
     CSSRuleSetByHost => {
         'www.taiwannews.com.tw' => {
