@@ -188,3 +188,5 @@ https://cnews.com.tw/137200502a01/
 https://cnews.com.tw/137200430a04/
 https://cnews.com.tw/%e3%80%90%e7%8d%a8%e5%ae%b6%e3%80%91%e5%8f%97uber%e7%89%bd%e9%80%a3-foodpanda%e7%a9%ba%e8%85%b9%e7%86%8a%e8%b2%93-%e5%9c%a8%e5%8f%b0%e9%81%95/
 https://cnews.com.tw/%e6%96%b0%e6%bd%ae%e6%b5%81%e6%8f%92%e6%97%97%e7%a5%9e%e8%85%a6%ef%bc%81%e4%b8%ad%e8%8f%af%e9%9b%bb%e4%bf%a1%e8%91%a3%e4%ba%8b%e9%95%b7%e7%88%ad%e5%a5%aa%e6%88%b0%e6%8f%90%e5%89%8d%e9%96%8b%e6%89%93/
+http://newnet.tw/Newsletter/News.aspx?Iinfo=4&iNumber=28066
+http://newnet.tw/Newsletter/News.aspx?Iinfo=4&iNumber=28067
